# PrepStation

./: README.md
moveitinterface_cpp/: CMakeLists.txt  package.xml
moveitinterface_cpp/include/moveitinterface_cpp/: moverobotclass.hpp
moveitinterface_cpp/launch/: agv_pick.launch.py  ff.launch.py  moveinterfa.launch.py  pick_component.launch.py  record.launch.py  ss.launch.py
moveitinterface_cpp/src/: githu.cpp  move_robot_usecase1.cpp  move_ur5e_mz.cpp  moveit_subscrber_solution_lambda.cpp  moviet_subscriber_solution_oop.cpp  pick_place_from_agv.cpp  trrash.cpp
panda_info/: CMakeLists.txt  package.xml
panda_info/msg/: PandaWsMsg.msg
panda_workstation/: package.xml  setup.cfg  setup.py
panda_workstation/panda_workstation/: panda_communication.py
robot_interface/: CMakeLists.txt  package.xml
rs_location_retrival/: package.xml  setup.cfg  setup.py
rs_location_retrival/resource/: marker_reader.py
rs_location_retrival/rs_location_retrival/: align-depth2color.py  libreal_sense_test.py  localization.py  moveit_interface.py  test.py
